--- a/fam_allocate.html
+++ b/fam_allocate.html
@@ -16,6 +16,8 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="limitations.html">Design Choices</a></li>
 				<li><a href="errors.html">Exceptions and Error Codes</a></li>
+				<li><a href="services.html">Services</a></li>
+				<li><a href="config_files.html">Configuration Files</a></li>
 			</ul>
 			<hr>
 			Initialization and Finalization
@@ -30,6 +32,7 @@
 				<li><a href="fam_list_options.html">fam_list_options</a></li>
 				<li><a href="fam_get_option.html">fam_get_option</a></li>
 				<li><a href="fam_lookup.html">fam_lookup</a></li>
+				<li><a href="fam_stat.html">fam_stat</a></li>
 			</ul>
 			<hr>
 			Memory Allocation
@@ -82,6 +85,7 @@
 			<hr>
 			Ordering
 			<ul>
+				<li><a href="fam_barrier_all.html">fam_barrier_all</a></li>
 				<li><a href="fam_fence.html">fam_fence</a></li>
 				<li><a href="fam_quiet.html">fam_quiet</a></li>
 			</ul>
@@ -115,13 +119,19 @@
 	</table>
 	<p>&nbsp;</p>
 	<h2>Return Values</h2>
+	<p>Descriptor to the allocated data item. Throws Fam_Exception on error.</p>
+	<h2>Fam Error numbers</h2>
 	<table>
 	<tbody>
-	<tr><th>Exception</th><th>Description</th></tr>
+	<tr><th>Error</th><th>Description</th></tr>
 	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights</td></tr>
-	<tr><td class="code">FAM_ERR_ALREADYEXIST</td><td>the data item name is already present in FAM</td></tr>
-	<tr><td class="code">FAM_ERR_GRPC</td><td>there is a communication error with memory server</td></tr>
-	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>Memory server initialization failure</td></tr>
+	<tr><td class="code">FAM_ERR_ALREADYEXIST</td><td>Data item name is already present in FAM</td></tr>
+	<tr><td class="code">FAM_ERR_NAME_TOO_LONG</td><td>Data item name too long.</td></tr>
+	<tr><td class="code">FAM_ERR_RPC</td><td>Communication error from grpc layer.</td></tr>
+	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>RPC service not available.</td></tr>
+	<tr><td class="code">FAM_ERR_METADATA</td><td>Metadata service error.</td></tr>
+	<tr><td class="code">FAM_ERR_MEMORY</td><td>Memory service error.</td></tr>
+	<tr><td class="code">FAM_ERR_RESOURCE</td><td>Resource not available.</td></tr>
 	</tbody>
 	</table>
 	<h2>Notes</h2>
@@ -133,6 +143,20 @@
 		provided during allocation, then the program itself is responsible for
 		saving and tracking the descriptor if required later, since the data
 		in FAM will be unreachable without the descriptor.</p>
+	<p>Fam_Descriptor provides a method to retrieve an opaque read-only data structure called 
+	Fam_Global_Descriptor which represents both the region and data item in FAM. Fam_Global_Descriptor
+	can be freely copied, and shared across processing nodes by the program, and are portable
+	across operating system and program instances.</p>
+<pre>
+// Fam_Global_Descriptor Fam_Descriptor::get_global_descriptor();
+Fam_Global_Descriptor gDescriptor = famDescriptor->get_global_descriptor();
+</pre>
+	<p>Fam_Descriptor can be instantiated from Fam_Global_Descriptor using the following constructor.</p>
+<pre>
+// Fam_Descriptor::Fam_Descriptor(Fam_Global_Descriptor gDescriptor);
+Fam_Descriptor *dataItem = new Fam_Descriptor(gDescriptor);
+</pre>
+
 	<h2 id="e1">Example</h2>
 <pre>
 #include &lt;string.h>
@@ -165,7 +189,7 @@ int main(void) {
 		</article>
 	</section>
 	<footer>
-		<p>Copyright 2019, Hewlett Packard Enterprise Development Co, LLP</p>
+		<p>Copyright 2021, Hewlett Packard Enterprise Development Co, LLP</p>
 	</footer>
 </body>
 </html>
