--- a/v1.0/fam_map.html
+++ b/v1.0/fam_map.html
@@ -30,6 +30,7 @@
 				<li><a href="fam_list_options.html">fam_list_options</a></li>
 				<li><a href="fam_get_option.html">fam_get_option</a></li>
 				<li><a href="fam_lookup.html">fam_lookup</a></li>
+				<li><a href="fam_size.html">fam_size</a></li>
 			</ul>
 			<hr>
 			Memory Allocation
@@ -82,6 +83,7 @@
 			<hr>
 			Ordering
 			<ul>
+				<li><a href="fam_barrier_all.html">fam_barrier_all</a></li>
 				<li><a href="fam_fence.html">fam_fence</a></li>
 				<li><a href="fam_quiet.html">fam_quiet</a></li>
 			</ul>
@@ -93,7 +95,7 @@
 	<h2>Synopsis</h2>
 	<p class="code">void *fam_map(Fam_Descriptor *descriptor);</p>
 	<h2>Description</h2>
-	<p>This method maps a data item in FAM to the PEâ€™s virtual address
+	<p>This method maps a data item in FAM to the PE's virtual address
 		space.</p>
 	<h2>Input Arguments</h2>
 	<table>
@@ -170,9 +172,7 @@ int main(void) {
 	// ... Finalization code follows
 }
 </pre>	
-	
-		<a name="_Toc21627088"></a><a name="_Toc21685569"></a>
-		</article>
+	</article>
 	</section>
 	<footer>
 		<p>Copyright 2019, Hewlett Packard Enterprise Development Co, LLP</p>
