--- a/v1.0/fam_resize_region.html
+++ b/v1.0/fam_resize_region.html
@@ -30,6 +30,7 @@
 				<li><a href="fam_list_options.html">fam_list_options</a></li>
 				<li><a href="fam_get_option.html">fam_get_option</a></li>
 				<li><a href="fam_lookup.html">fam_lookup</a></li>
+				<li><a href="fam_size.html">fam_size</a></li>
 			</ul>
 			<hr>
 			Memory Allocation
@@ -82,6 +83,7 @@
 			<hr>
 			Ordering
 			<ul>
+				<li><a href="fam_barrier_all.html">fam_barrier_all</a></li>
 				<li><a href="fam_fence.html">fam_fence</a></li>
 				<li><a href="fam_quiet.html">fam_quiet</a></li>
 			</ul>
@@ -140,18 +142,18 @@ int main(void) {
 		Fam_Region_Descriptor *rd =	myFam->fam_create_region("myRegion", (uint64_t)10000000000, 0777, RAID5);
 			
 		// use the created region...
-		printf("fam_create_region successfull\n");
+		printf("fam_create_region successful\n");
 			
 		// resize the region to 20 GB
 		myFam->fam_resize_region(rd, (uint64_t)20000000000);
 			
 		// use the re-sized region
-		printf("fam_resize_region successfull\n");
+		printf("fam_resize_region successful\n");
 		// ... continuation code here
 			
 		// we are finished. Destroy the region and everything in it
 		myFam->fam_destroy_region(rd);
-		printf("fam_destroy_region successfull\n");
+		printf("fam_destroy_region successful\n");
 	} catch (Fam_Allocator_Exception &amp;e) {
 		printf("Create/Destroy region failed: %d: %s\n", e.fam_error(), e.fam_error_msg());
 	}
