--- a/v1.0/fam_put.html
+++ b/v1.0/fam_put.html
@@ -30,6 +30,7 @@
 				<li><a href="fam_list_options.html">fam_list_options</a></li>
 				<li><a href="fam_get_option.html">fam_get_option</a></li>
 				<li><a href="fam_lookup.html">fam_lookup</a></li>
+				<li><a href="fam_size.html">fam_size</a></li>
 			</ul>
 			<hr>
 			Memory Allocation
@@ -82,6 +83,7 @@
 			<hr>
 			Ordering
 			<ul>
+				<li><a href="fam_barrier_all.html">fam_barrier_all</a></li>
 				<li><a href="fam_fence.html">fam_fence</a></li>
 				<li><a href="fam_quiet.html">fam_quiet</a></li>
 			</ul>
@@ -89,7 +91,6 @@
 		</nav>
 		<article>
 			<h1 class="code">openfam::fam::fam_put</h1>
-	</p>
 	<p>Copy a segment of memory from local memory to FAM.</p>
 	<h2>Synopsis</h2>
 	<p class="code">
