--- a/v1.0/fam_scatter.html
+++ b/v1.0/fam_scatter.html
@@ -30,6 +30,7 @@
 				<li><a href="fam_list_options.html">fam_list_options</a></li>
 				<li><a href="fam_get_option.html">fam_get_option</a></li>
 				<li><a href="fam_lookup.html">fam_lookup</a></li>
+				<li><a href="fam_size.html">fam_size</a></li>
 			</ul>
 			<hr>
 			Memory Allocation
@@ -82,6 +83,7 @@
 			<hr>
 			Ordering
 			<ul>
+				<li><a href="fam_barrier_all.html">fam_barrier_all</a></li>
 				<li><a href="fam_fence.html">fam_fence</a></li>
 				<li><a href="fam_quiet.html">fam_quiet</a></li>
 			</ul>
@@ -237,7 +239,7 @@ int main(void) {
 		myFam->fam_scatter_blocking(local, descriptor, 5L, indexes, sizeof(int));
 	
 		// ... we now have the correct elements in FAM
-		printf("fam_scatter successfull. Correct elements are now in FAM.\n");
+		printf("fam_scatter successful. Correct elements are now in FAM.\n");
 	 } catch (Fam_Exception &amp;e) {
 		printf("fam API failed: %d: %s\n", e.fam_error(), e.fam_error_msg());
 	 }
