--- a/v1.0/fam_xor.html
+++ b/v1.0/fam_xor.html
@@ -30,6 +30,7 @@
 				<li><a href="fam_list_options.html">fam_list_options</a></li>
 				<li><a href="fam_get_option.html">fam_get_option</a></li>
 				<li><a href="fam_lookup.html">fam_lookup</a></li>
+				<li><a href="fam_size.html">fam_size</a></li>
 			</ul>
 			<hr>
 			Memory Allocation
@@ -82,6 +83,7 @@
 			<hr>
 			Ordering
 			<ul>
+				<li><a href="fam_barrier_all.html">fam_barrier_all</a></li>
 				<li><a href="fam_fence.html">fam_fence</a></li>
 				<li><a href="fam_quiet.html">fam_quiet</a></li>
 			</ul>
@@ -125,6 +127,7 @@
 		the offset argument must point to the correct value for the data type.
 		Availability of these methods is dependent on hardware support for the
 		operations.</p>
+	<p>A subsequent successful completion of fam_quiet() call ensures the completion of this atomic operation.</p> 
 	<h2>Example</h2>
 <pre>
 #include &lt;string.h>
@@ -143,7 +146,7 @@ int main(void) {
 		// (an integer array with at least 10 elements)
 		Fam_Descriptor *descriptor = myFam->fam_lookup("myItem", "myRegion");
 	
-		// Atomically replace a value of first interger element in the array
+		// Atomically replace a value of first integer element in the array
 		// with the Bitwise XOR of it and a value of 0x444
 		uint32_t value = 0x444;
 		myFam->fam_xor(descriptor, 0, value);
